add ssh keychain

--- a/.env
+++ b/.env
@@ -35,3 +35,6 @@ function vscode(){/Applications/Visual\ Studio\ Code.app/Contents/Resources/app/
 
 # PanWriter
 function panwriter(){open -a ~/code/panwriter/dist/mac/PanWriter.app "$@";}
+
+# load ssh passphrase from keychain (otherwise it's not persisted after logging user out)
+ssh-add --apple-use-keychain 2> /dev/null
