.env: change username

--- a/.env
+++ b/.env
@@ -14,12 +14,12 @@ alias psqlstart='pg_ctl -D /usr/local/var/postgres start'
 alias psqlstop='pg_ctl -D /usr/local/var/postgres stop'
 
 # stack install stuff
-export PATH=/Users/maurobieg/.local/bin:$PATH
+export PATH=/Users/mauro/.local/bin:$PATH
 
 alias c='clear;'
 alias txtdiff='git diff --word-diff --patience'
-alias keys='ccrypt -c /Users/maurobieg/Desktop/Mauro/Diverses/Infos/keys.txt.cpt | less'
-alias vimkeys='vim /Users/maurobieg/Desktop/Mauro/Diverses/Infos/keys.txt.cpt'
+alias keys='ccrypt -c /Users/mauro/Desktop/Mauro/Diverses/Infos/keys.txt.cpt | less'
+alias vimkeys='vim /Users/mauro/Desktop/Mauro/Diverses/Infos/keys.txt.cpt'
 alias mplayer='/Applications/MPlayer\ OSX\ Extended.app/Contents/Resources/Binaries/mpextended.mpBinaries/Contents/MacOS/mplayer'
 #alias mplayerac3='mplayer -ac hwac3, -channels 6 -af lavcac3enc=1'
 #alias mplayerac3='mplayer -cache 2000 -ac hwac3'
