--- a/.env
+++ b/.env
@@ -2,16 +2,17 @@
 eval "$(/opt/homebrew/bin/brew shellenv)"
 
 # volta.sh
+VOLTA_FEATURE_PNPM=1
 VOLTA_HOME=$HOME/.volta
 export PATH=$VOLTA_HOME/bin:$PATH
 
 # Ruby rbenv
 if which rbenv > /dev/null; then eval "$(rbenv init -)"; fi
 
-# Postgres App
-# export PATH=$PATH:/Applications/Postgres.app/Contents/Versions/latest/bin
-alias psqlstart='pg_ctl -D /usr/local/var/postgres start'
-alias psqlstop='pg_ctl -D /usr/local/var/postgres stop'
+# Postgres
+export PATH=/opt/homebrew/opt/postgresql@18/bin:$PATH
+# or for only client: brew install lipq
+export PATH=/opt/homebrew/opt/libpq/bin:$PATH
 
 # stack install stuff
 export PATH=/Users/mauro/.local/bin:$PATH
@@ -30,10 +31,8 @@ export LANGUAGE=en_US.UTF-8
 export LANG=en_US.UTF-8
 export LC_ALL=en_US.UTF-8
 
-# Visual Studio Code
-function vscode(){/Applications/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code "$@"; }
+function vscode(){/Applications/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code \.; }
 
-# PanWriter
 function panwriter(){open -a ~/code/panwriter/dist/mac/PanWriter.app "$@";}
 
 # load ssh passphrase from keychain (otherwise it's not persisted after logging user out)
